Added JWT auth filter, added /me endpoint

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ POSTGRES_PASSWORD=example-password
 
 POSTGRES_HOST=example-host
 POSTGRES_PORT=0000
+
+JWT_SECRET=example-jwt-secret
+JWT_TIME_TO_LIVE_SECONDS=0
