--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=${POSTGRES_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.flyway.enabled=true
+
+JWT_SECRET=${JWT_SECRET}
+JWT_TIME_TO_LIVE_SECONDS=${JWT_TIME_TO_LIVE_SECONDS}
